# reactions

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  packages.txt  pyproject.toml  requirements.yml  ruff.toml  setup.py  tests_requirements.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvement.md  feature_request.md
.github/workflows/: docs.yml  test.yml
docs/: Makefile  requirements.yml
docs/source/: conf.py  index.rst  reactions.rst  tests.rst
reactions/: __init__.py  particle.py  reaction.py  reaction_category.py  reaction_rate.py  spectrum.py  typus.py
tests/: conftest.py  test_proto_reaction.py  test_reaction.py  test_serialization.py
