[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramp-reactions"
authors = [
    {name = "Nuclear RAMP team", email = "nuclear.ramp.dev@gmail.com"},
]
description = "Package for representation of radioactive and induced nuclear reactions"
dynamic = ["version"]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "multipledispatch",
    "numpy",
    "ramp-isotopes",
    "ramp-core",
]

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
]

[tool.setuptools.packages.find]
include = ['reactions*']
exclude = ['tests*']

[tool.setuptools_scm]
